content/renderer/input/render_widget_input_handler.cc
@@ -391,7 +391,8 @@ void RenderWidgetInputHandler::HandleInputEvent(
       dispatch_type == DISPATCH_TYPE_NON_BLOCKING_NOTIFY_MAIN) {
     // |non_blocking| means it was ack'd already by the InputHandlerProxy
     // so let the delegate know the event has been handled.
-    delegate_->NotifyInputEventHandled(input_event.type(), ack_result);
+    delegate_->NotifyInputEventHandled(input_event.type(), processed,
+                                       ack_result);
   }
 
   if ((dispatch_type == DISPATCH_TYPE_BLOCKING ||
@@ -407,7 +408,7 @@ void RenderWidgetInputHandler::HandleInputEvent(
   if (RenderThreadImpl::current()) {
     RenderThreadImpl::current()
         ->GetRendererScheduler()
-        ->DidHandleInputEventOnMainThread(input_event);
+        ->DidHandleInputEventOnMainThread(input_event, processed);
   }
 
 #if defined(OS_ANDROID)
