content/renderer/mus/compositor_mus_connection_unittest.cc
@@ -140,6 +140,7 @@ class TestInputHandlerManagerClient : public InputHandlerManagerClient {
 
   void NotifyInputEventHandled(int routing_id,
                                blink::WebInputEvent::Type type,
+                               blink::WebInputEventResult result,
                                InputEventAckState ack_result) override {}
   void ProcessRafAlignedInput(int routing_id) override {}
 
